--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
-    <title>UI</title>
+    <link rel="shortcut icon" href="./static/favicon.ico" type="image/x-icon">
+    <title>in2UI</title>
   </head>
   <body>
     <div id="app"></div>
