--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>in2UI</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="in2"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
